# ProyectoAdC

./: .gitignore  CMakeLists.txt  README.md  clone.sh  config.sh  differences.sh  test.sh
aos/: imageaos.cpp  imageaos.hpp
common/: image.cpp  image.hpp  progargs.cpp  progargs.h  progargs.hpp
image-aos/: imgaos.cpp
image-soa/: imgsoa  imgsoa.cpp
soa/: imagesoa.cpp  imagesoa.hpp
